Commit four, front y arreglos de codigo.